k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-postgres-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: python-postgres
  template:
    metadata:
      labels:
        app: python-postgres
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: app
          image: abhijeetpratap/python-postgres-compose-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
