k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-postgres-app
spec:
  type: NodePort
  selector:
    app: python-postgres
  ports:
    - port: 5000
      targetPort: 5000
